# changeology

./: .gitignore  Cargo.toml  Claude.md  README.md  VISION.md  roadmap.md  session_context.md
crates/changeology/: Cargo.toml
crates/changeology/src/: app.rs  changeology.rs  diff_canvas.rs  menu.rs  sidebar.rs  ui.rs  watcher.rs
crates/changeology/src/panels/: file_tree.rs  history.rs  mod.rs
crates/diff/: Cargo.toml  README.md
crates/diff-ui/: Cargo.toml  README.md
crates/diff-ui/src/: diff_text_view.rs  main.rs  theme.rs
crates/diff/examples/: chunked_diff.rs  config_diff.rs  enhanced_diff.rs  line_ending_diff.rs  normalized_diff.rs  sample1.txt  sample2.txt  simple_diff.rs  word_diff.rs
crates/diff/examples/test_files/: diff_result.txt  large1.txt  large2.txt  section1.txt  section2.txt
crates/diff/src/: buffer_diff.rs  diff_hunk.rs  lib.rs  text_diff.rs
crates/diff/tests/: chunking_tests.rs  diff_hunk_tests.rs  diff_tests.rs  edge_cases.rs  granularity_tests.rs
crates/git/: Cargo.toml  README.md
crates/git/examples/: diff.rs  git_with_buffer_diff.rs  status.rs
crates/git/src/: lib.rs  repository.rs  status.rs
crates/infinite-canvas/: Cargo.toml  README.md  infinite_canvas_gpui.md
crates/infinite-canvas/examples/: basic.rs  textured.rs  textured_with_server.rs
crates/infinite-canvas/src/: camera.rs  canvas.rs  item.rs  layout.rs  lib.rs  options.rs  provider.rs  textured_provider.rs
crates/tree-viewer/: Cargo.toml  README.md
crates/tree-viewer/docs/: input-system.md  tree-trait-design.md
crates/tree-viewer/examples/: list_directory.rs
crates/tree-viewer/src/: lib.rs  main.rs
crates/tree-viewer/src/tree/: filesystem.rs  mod.rs  node.rs  traits.rs
research/: architecture-analysis.md  bevy_3d_camera_research.md  file_tree_visualizations.md  gpui_component_ui_research.md  implementation_template.md  infinite-canvas-architecture-review.md  infinite_canvas_gpui.md  segfault-investigation.md  textured-canvas-architecture-v2.md  textured-canvas-architecture-v3.md  textured-canvas-architecture-v4.md  textured-canvas-architecture.md  textured-surface-workflow.md  tree_viewer_implementation.md
research/show-diff-canvas-on-dirty-selected/: show-diff-canvas-on-dirty-selected.md
