[workspace]
members = [
    "crates/changeology",
    "crates/git",
    "crates/diff",
    "crates/diff-ui",
    "crates/tree-viewer",
    "crates/infinite-canvas"
]
default-members = ["crates/changeology", "crates/git", "crates/diff", "crates/infinite-canvas"]
resolver = "2"

[workspace.dependencies]
changeology = { path = "crates/changeology" }
git = { path = "crates/git" }
buffer-diff = { path = "crates/diff" }

# GPUI (from crates.io - must match gpui-component's dependency)
gpui = "0.2.2"

# GPUI Component (from crates.io)
gpui-component = "0.5.0"
gpui-component-assets = { version = "0.5.0" }

# External dependencies
git2 = "0.18.2"
anyhow = "1.0.75"
derive_more = "0.99.17"
pathdiff = "0.2.1"
path-clean = "1.0.1"
ropey = "1.6.1"
similar = "2.4.0"
serde = { version = "1.0", features = ["derive"] }

smallvec = "1"
# For testing
tempfile = "3.8.1"
insta = "1.34.0"
pretty_assertions = "1.4.0"
proptest = "1.3.1"
