[package]
name = "changeology"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "changeology"
path = "src/changeology.rs"

[dependencies]
# Workspace crates
buffer-diff = { path = "../diff" }
git = { path = "../git" }
infinite-canvas = { path = "../infinite-canvas" }

# GPUI (from workspace)
gpui.workspace = true

# GPUI Component (from workspace)
gpui-component-assets.workspace = true
gpui-component.workspace = true

# General
anyhow.workspace = true
rand = "0.8.5"

# File system watching
notify = "8.2.0"

# Logging
log = "0.4"
env_logger = "0.11"
