[package]
name = "diff"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Error handling
anyhow.workspace = true
# Text representation using a rope data structure
ropey.workspace = true
# Helpful derive macros
derive_more.workspace = true
# Diff algorithm 
similar.workspace = true
# Optional: for serialization if needed
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "similar/serde"]

[dev-dependencies]
# For testing
insta.workspace = true  # For snapshot testing
pretty_assertions = "1.4.0"  # Better assertion messages
proptest = "1.3.1"  # Property-based testing