[package]
name = "infinite-canvas"
version = "0.1.0"
edition = "2021"
description = "An infinite canvas component for GPUI with pan, zoom, and layout algorithms"
license = "Apache-2.0"

[lib]
name = "infinite_canvas"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "textured"
path = "examples/textured.rs"

[features]
default = []
# Enable texture rendering using vendored GPUI with Application::textured()
# This requires Linux/FreeBSD and the vendored GPUI
vendored-gpui = []

[dependencies]
gpui.workspace = true
gpui-component.workspace = true

anyhow.workspace = true
serde.workspace = true
smallvec = "1"
image = "0.25"

[dev-dependencies]
gpui-component-assets.workspace = true
