[package]
name = "infinite-canvas"
version = "0.1.0"
edition = "2021"
description = "An infinite canvas component for GPUI with pan, zoom, and provider-based item rendering"
license = "Apache-2.0"

[lib]
name = "infinite_canvas"
path = "src/lib.rs"

[[example]]
name = "textured"
path = "examples/textured.rs"

[dependencies]
gpui.workspace = true
serde.workspace = true
log = { version = "0.4", features = ["kv_unstable_serde", "serde"] }

[dev-dependencies]
env_logger = "0.11"
